Minified now working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name" : "LiflineArts",
+    "name" : "LifelineArts",
     "version" : "0.1.0",
     "author" : "Benjamin Cerigo",
     "private" : true,
